# currency-converter-bot

./: .gitignore  Makefile  README.md  docker-compose.yml
bot/: .flake8  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
bot/src/: __main__.py  env
bot/src/dto/: convert_currency.py
bot/src/handlers/: __init__.py
bot/src/handlers/conversion_handlers/: __init__.py  currency_conversion.py
bot/src/handlers/user_interaction_handlers/: __init__.py  help.py  message_handler.py  start.py
bot/src/services/: currency_api.py  message_service.py
bot/src/utils/: __init__.py  bot_commands.py
